Add Swagger annotations
