# rest-stubs/typescript-fetch/api.ts
@@ -1,10 +1,10 @@
 /// <reference path="./custom.d.ts" />
 // tslint:disable
 /**
- * todo.proto
+ * practice-grpc-and-web
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: version not set
+ * OpenAPI spec version: 0.0.1
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -162,37 +162,37 @@ export interface TodoRecord {
      * @type {number}
      * @memberof TodoRecord
      */
-    id?: number;
+    id: number;
     /**
      * 
      * @type {Date}
      * @memberof TodoRecord
      */
-    createdAt?: Date;
+    createdAt: Date;
     /**
      * 
      * @type {string}
      * @memberof TodoRecord
      */
-    title?: string;
+    title: string;
     /**
      * 
      * @type {string}
      * @memberof TodoRecord
      */
-    detail?: string;
+    detail: string;
     /**
      * 
      * @type {Date}
      * @memberof TodoRecord
      */
-    deadline?: Date;
+    deadline: Date;
     /**
      * 
      * @type {RecordStatus}
      * @memberof TodoRecord
      */
-    status?: RecordStatus;
+    status: RecordStatus;
 }
 
 /**
